--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="title_place_holder">Title Place Holder</string>
     <string name="author_placeholder">Author PlaceHolder</string>
     <string name="search">Name Book</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="arg_id">key_book</string>
 </resources>
